--- a/.gitignore
+++ b/.gitignore
@@ -116,5 +116,4 @@ midi_data_valid_quantized/
 midi_data_valid_quantized_inputs/
 midi_data_valid_quantized_velocities/
 output/
-
-model.h5
+models/
