--- a/.gitignore
+++ b/.gitignore
@@ -118,4 +118,5 @@ midi_data_valid_quantized/
 midi_data_valid_quantized_inputs/
 midi_data_valid_quantized_velocities/
 output/
+output_baseline/
 models/
