Add midi_repairer file which repairs broken MIDI files.
Although, as it turns out, I don't have any broken files. So for now we don't need to use this file at all. Oops.

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ input_valid_inputs/
 input_valid_velocities/
 midi_data/
 midi_data_valid/
+midi_data_valid_repaired/
 midi_data_valid_quantized/
 midi_data_valid_quantized_inputs/
 midi_data_valid_quantized_velocities/
