--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 click ~= 8.0.3
-fastai ~= 1.0.61
+fastai ~= 2.7.5
+jupyterlab ~= 3.4.3
 mido ~= 1.2.10
-numpy ~= 1.21.5
-pandas ~= 1.3.5
-pretty_midi ~= 0.2.9
+numpy ~= 1.23.0
+pandas ~= 1.4.3
+pyarrow ~= 8.0.0
+requests ~= 2.28.1
+scikit-learn ~= 1.1.1
 seaborn ~= 0.11.2
-scikit-learn ~= 1.0.2
-torch ~= 1.10.1
-torchvision ~= 0.11.2
+torch ~= 1.11.0
+torchvision ~= 0.12.0
 tqdm ~= 4.62.3
